--- a/src/main/resources/com/example/bomberman/view/menu-view.fxml
+++ b/src/main/resources/com/example/bomberman/view/menu-view.fxml
@@ -5,94 +5,65 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
-<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.bomberman.controller.MainMenuController"
-      alignment="CENTER" spacing="20" styleClass="main-menu">
+      fx:id="mainContainer" styleClass="main-menu">
 
     <padding>
         <Insets top="50" bottom="50" left="50" right="50" />
     </padding>
 
-    <!-- Titre -->
-    <Label text="SUPER BOMBERMAN" styleClass="main-title">
-        <font>
-            <Font name="System Bold" size="36.0" />
-        </font>
-    </Label>
-
-    <Label text="Version Améliorée" styleClass="subtitle">
-        <font>
-            <Font size="16.0" />
-        </font>
-    </Label>
-
-    <!-- Espace -->
-    <Region prefHeight="20" />
-
-    <!-- Sélection des joueurs -->
-    <VBox alignment="CENTER" spacing="15" styleClass="player-selection">
-        <Label text="Sélection des Joueurs" styleClass="section-title">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-        </Label>
-
-        <HBox alignment="CENTER" spacing="20">
-            <VBox alignment="CENTER" spacing="5">
-                <Label text="Joueur 1" />
-                <ComboBox fx:id="player1Combo" prefWidth="150" />
-            </VBox>
-
-            <Label text="VS">
+    <top>
+        <!-- Titre -->
+        <VBox alignment="CENTER" spacing="10">
+            <Label text="SUPER BOMBERMAN" fx:id="titleLabel" styleClass="main-title">
                 <font>
-                    <Font name="System Bold" size="18.0" />
+                    <Font name="System Bold" size="36.0" />
                 </font>
             </Label>
 
-            <VBox alignment="CENTER" spacing="5">
-                <Label text="Joueur 2" />
-                <ComboBox fx:id="player2Combo" prefWidth="150" />
-            </VBox>
-        </HBox>
-    </VBox>
+            <Label text="Version Améliorée" styleClass="subtitle">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </Label>
+        </VBox>
+    </top>
 
-    <!-- Espace -->
-    <Region prefHeight="20" />
+    <center>
+        <!-- Menu Options -->
+        <VBox fx:id="menuOptions" alignment="CENTER" spacing="25">
+            <Button fx:id="playButton" text="JOUER" prefWidth="200" prefHeight="40"
+                    styleClass="primary-button" onAction="#startNewGame">
+                <font>
+                    <Font name="System Bold" size="16.0" />
+                </font>
+            </Button>
 
-    <!-- Boutons du menu -->
-    <VBox alignment="CENTER" spacing="15">
-        <Button fx:id="playButton" text="JOUER" prefWidth="200" prefHeight="40"
-                styleClass="primary-button">
-            <font>
-                <Font name="System Bold" size="16.0" />
-            </font>
-        </Button>
+            <Button fx:id="levelEditorButton" text="Éditeur de Niveaux" prefWidth="200" prefHeight="35"
+                    styleClass="secondary-button" onAction="#openLevelEditor" />
 
-        <Button fx:id="profilesButton" text="Personnaliser les Contrôles" prefWidth="200" prefHeight="35"
-                styleClass="secondary-button" onAction="#openProfilesManagement" />
+            <Button fx:id="settingsButton" text="Paramètres" prefWidth="200" prefHeight="35"
+                    styleClass="secondary-button" onAction="#openSettings" />
 
-        <Button fx:id="editorButton" text="Éditeur de Niveaux" prefWidth="200" prefHeight="35"
-                styleClass="secondary-button" />
+            <Button fx:id="quitButton" text="Quitter" prefWidth="200" prefHeight="35"
+                    styleClass="danger-button" onAction="#quitGame" />
+        </VBox>
+    </center>
 
-        <Button fx:id="settingsButton" text="Paramètres" prefWidth="200" prefHeight="35"
-                styleClass="secondary-button" />
+    <bottom>
+        <!-- Informations -->
+        <VBox alignment="CENTER" spacing="10">
+            <Label text="Contrôles: Joueur 1 (ZQSD + A + E) | Joueur 2 (Flèches + Espace + Ctrl)"
+                   styleClass="controls-info">
+                <font>
+                    <Font size="12.0" />
+                </font>
+            </Label>
+        </VBox>
+    </bottom>
 
-        <Button fx:id="quitButton" text="Quitter" prefWidth="200" prefHeight="35"
-                styleClass="danger-button" />
-    </VBox>
-
-    <!-- Espace -->
-    <Region VBox.vgrow="ALWAYS" />
-
-    <!-- Informations -->
-    <Label text="Contrôles: Joueur 1 (ZQSD + A) | Joueur 2 (Flèches + Espace)"
-           styleClass="controls-info">
-        <font>
-            <Font size="11.0" />
-        </font>
-    </Label>
-
-</VBox>
+</BorderPane>
